Macro/skim/logs/19545448_2.err
input_line_9:2:35: error: expected expression
 FlatMix(2*100000, (2+1)*100000-1,) /* '.x' tries to invoke a function with the same name as the macro */
                                  ^
